[EDELIVERY-1207] - created a new module for the WildFly war and reuse the web fragment; fixed failing unit tests