@@ -30,195 +30,7 @@
         <soapui.remoteUrl>http://localhost:9080</soapui.remoteUrl>
     </properties>
 
-    <profiles>
-        <profile>
-            <id>wildfly-mysql</id>
-            <properties>
-                <webXmlPath>src/main/conf/wildfly/web.xml</webXmlPath>
-                <domibus.classifier>wildfly</domibus.classifier>
-                <wildfly.version>9.0.2.Final</wildfly.version>
-            </properties>
-            <build>
-                <resources>
-                    <resource>
-                        <directory>src/main/resources</directory>
-                        <filtering>true</filtering>
-                    </resource>
-                </resources>
 
-                <plugins>
-                    <plugin>
-                        <groupId>org.codehaus.cargo</groupId>
-                        <artifactId>cargo-maven2-plugin</artifactId>
-                        <version>1.4.15</version>
-                        <executions>
-                            <execution>
-                                <id>build-wildfly</id>
-                                <goals>
-                                    <goal>configure</goal>
-                                </goals>
-                                <phase>pre-integration-test</phase>
-                                <configuration>
-                                    <container>
-                                        <containerId>wildfly9x</containerId>
-                                        <zipUrlInstaller>
-                                            <url>
-                                                https://ec.europa.eu/cefdigital/artifact/content/repositories/eDelivery/org/wildfly/as/wildfly-as-dist/9.0.2.Final/wildfly-as-dist-9.0.2.Final.zip
-                                            </url>
-                                        </zipUrlInstaller>
-                                    </container>
-                                    <deployables>
-                                        <deployable/>
-                                    </deployables>
-                                    <configuration>
-                                        <files>
-                                            <file>
-                                                <file>${project.basedir}/src/main/conf/wildfly/domibus/conf</file>
-                                                <todir>conf/domibus</todir>
-                                            </file>
-                                        </files>
-                                    </configuration>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>com.google.code.maven-replacer-plugin</groupId>
-                        <artifactId>replacer</artifactId>
-                        <version>1.5.3</version>
-                        <executions>
-                            <execution>
-                                <id>domibus-conf-location</id>
-                                <phase>post-integration-test</phase>
-                                <goals>
-                                    <goal>replace</goal>
-                                </goals>
-                                <configuration>
-                                    <includes>
-                                        <include>
-                                            ${project.build.directory}/cargo/installs/wildfly-as-dist-${wildfly.version}/wildfly-${wildfly.version}/bin/standalone.conf.bat
-                                        </include>
-                                        <include>
-                                            ${project.build.directory}/cargo/installs/wildfly-as-dist-${wildfly.version}/wildfly-${wildfly.version}/bin/standalone.conf
-                                        </include>
-                                    </includes>
-                                    <replacements>
-                                        <!-- Please keep the values from the "token" and the "value" fields on one line and do not include any whitespaces -->
-                                        <replacement>
-                                            <token>"JAVA_OPTS=-Xms64M -Xmx512M -XX:MaxPermSize=256M"</token>
-                                            <value>"JAVA_OPTS=-Xms64M -Xmx512M -XX:MaxPermSize=256M -Ddomibus.config.location=%JBOSS_HOME%/conf/domibus"</value>
-                                        </replacement>
-                                        <!-- Please keep the values from the "token" and the "value" fields on one line and do not include any whitespaces -->
-                                        <replacement>
-                                            <token>JAVA_OPTS="-Xms64m -Xmx512m -XX:MaxPermSize=256m -Djava.net.preferIPv4Stack=true"</token>
-                                            <value>JAVA_OPTS="-Xms64m -Xmx512m -XX:MaxPermSize=256m -Djava.net.preferIPv4Stack=true -Ddomibus.config.location=\$JBOSS_HOME/conf/domibus"</value>
-                                        </replacement>
-                                    </replacements>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-assembly-plugin</artifactId>
-                        <version>2.4</version>
-                        <configuration>
-
-                            <descriptors>
-                                <descriptor>src/main/assembly/wildfly/wildfly-full.xml</descriptor>
-                                <descriptor>src/main/assembly/wildfly/wildfly-configuration-only.xml</descriptor>
-                                <descriptor>../Domibus-MSH-tomcat/src/main/assembly/sample-configuration-and-testing.xml</descriptor>
-                                <descriptor>../Domibus-MSH-tomcat/src/main/assembly/sql-scripts.xml</descriptor>
-                            </descriptors>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>make-assembly</id>
-                                <!-- bound to verify because we need to execute cargo-package first
-                                    which is in pre-integration-test -->
-                                <phase>verify</phase>
-                                <goals>
-                                    <goal>single</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-
-            <dependencies>
-                <dependency>
-                    <groupId>eu.domibus</groupId>
-                    <artifactId>domibus-jms-wildfly</artifactId>
-                    <version>${project.version}</version>
-                </dependency>
-                <dependency>
-                    <groupId>eu.domibus</groupId>
-                    <artifactId>domibus-taskexecutor-wildfly</artifactId>
-                    <version>${project.version}</version>
-                </dependency>
-                <dependency>
-                    <groupId>org.glassfish.main.javaee-api</groupId>
-                    <artifactId>javax.jws</artifactId>
-                    <version>3.1.2.2</version>
-                </dependency>
-                <dependency>
-                    <groupId>org.apache.activemq</groupId>
-                    <artifactId>activemq-spring</artifactId>
-                    <version>${activemq.version}</version>
-                    <scope>provided</scope>
-                </dependency>
-                <dependency>
-                    <groupId>org.apache.activemq</groupId>
-                    <artifactId>activemq-jaas</artifactId>
-                    <version>${activemq.version}</version>
-                    <scope>provided</scope>
-                </dependency>
-                <dependency>
-                    <groupId>org.apache.activemq</groupId>
-                    <artifactId>activemq-kahadb-store</artifactId>
-                    <version>${activemq.version}</version>
-                    <scope>provided</scope>
-                </dependency>
-                <!-- Atokimos Library for distributed transactions -->
-                <dependency>
-                    <groupId>com.atomikos</groupId>
-                    <artifactId>transactions-jta</artifactId>
-                    <version>${atomikos.version}</version>
-                    <scope>provided</scope>
-                </dependency>
-                <dependency>
-                    <groupId>com.atomikos</groupId>
-                    <artifactId>transactions-jdbc</artifactId>
-                    <version>${atomikos.version}</version>
-                    <scope>provided</scope>
-                </dependency>
-                <dependency>
-                    <groupId>com.atomikos</groupId>
-                    <artifactId>transactions-jms</artifactId>
-                    <version>${atomikos.version}</version>
-                    <scope>provided</scope>
-                </dependency>
-                <dependency>
-                    <groupId>com.atomikos</groupId>
-                    <artifactId>transactions-hibernate3</artifactId>
-                    <version>${atomikos.version}</version>
-                    <scope>provided</scope>
-                    <exclusions>
-                        <exclusion>
-                            <artifactId>hibernate</artifactId>
-                            <groupId>org.hibernate</groupId>
-                        </exclusion>
-                    </exclusions>
-                </dependency>
-                <dependency>
-                    <groupId>xalan</groupId>
-                    <artifactId>xalan</artifactId>
-                    <version>2.7.1</version>
-                </dependency>
-            </dependencies>
-        </profile>
-    </profiles>
     <dependencies>
         <!-- Domibus modules -->
         <dependency>
